--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -32,7 +32,7 @@
         <hr class="extra-margins">
         <div class="col-sm-10 col-sm-offset-1 user-info">
             <p><i class="fa fa-user"></i> Username: {{ user.name }}</p>
-            <p><i class="fa fa-clock-o"></i> Joined: {{user.created[8:10]}}-{{user.created[5:7]}}-{{user.created[0:4]}}</p>
+            <p><i class="fa fa-clock-o remove-colour"></i> Joined: {{user.created[8:10]}}-{{user.created[5:7]}}-{{user.created[0:4]}}</p>
             {% if private %}
                 <p><i class="fa fa-envelope"></i> E-mail: {{ user.email_addr }}</p>
                 <div class="text-center">
