--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,10 +1,11 @@
 {% extends "/base.html" %}
 {% set active_page = "admin" %}
-{% from "admin/_helpers.html" import render_local_nav %}
+{% set active_link = "dashboard" %}
+{% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
-{{ render_local_nav(current_user, "admin") }}
+{{ render_admin_local_nav(current_user, active_link) }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
@@ -65,6 +66,18 @@
                         <h3  class="margin-bottom-xs">Background Jobs</h3>
                     </div>
                     </a>
+                </div>
+
+                <div class="col-xs-12">
+                    <div class="white-panel inset-shadow-white chart">
+                        <h2 class="text-center">Latest Developments</h2>
+                        <ul class="news">
+                            {% for new in news %}
+                                {{ new }}
+                            <li><strong>{{new.updated[0:10]}}</strong> {% if 'github' in new.links[0].href %} <span class="label label-info">{{_('New PyBossa version')}}</span> {% else %} <span class="label label-default">{{_('New SciFabric Blog Post')}}</span> {% endif %}<a target="_blank" href="{{new.links[0].href}}">{{new.title}}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
