--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -26,13 +26,13 @@
 </tr>
 {% endmacro %}
 
-{% macro render_admin_local_nav(current_user, active_link, active_project) %}
+{% macro render_admin_local_nav(current_user, active_link) %}
 <ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix">
     {% if current_user.admin %}
-    <li class="nav-link"><a href="{{url_for('admin.index')}}">Dashboard</a></li>
-    <li class="nav-link"><a href="{{url_for('admin.featured')}}">Featured</a></li>
-    <li class="nav-link"><a href="{{url_for('admin.categories')}}">Categories</a></li>
-    <li class="nav-link"><a href="{{url_for('admin.users')}}">Administrators</a></li>
+    <li class="nav-link{% if active_link == "dashboard" %} active{% endif%}"><a href="{{url_for('admin.index')}}">Dashboard</a></li>
+    <li class="nav-link{% if active_link == "featured" %} active{% endif%}"><a href="{{url_for('admin.featured')}}">Featured</a></li>
+    <li class="nav-link{% if active_link == "categories" %} active{% endif%}"><a href="{{url_for('admin.categories')}}">Categories</a></li>
+    <li class="nav-link{% if active_link == "administrators" %} active{% endif%}"><a href="{{url_for('admin.users')}}">Administrators</a></li>
     <li class="nav-link"><a href="{{url_for('admin.export_users', format='csv')}}">Export Users</a></li>
     <li class="nav-link"><a href="{{url_for('rq_dashboard.overview')}}">Background Jobs</a></li>
     {% endif %}
