--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -161,7 +161,7 @@
         <div class="col-md-8 col-xs-12">
             <div class="white-panel inset-shadow-white project-desc">
                 <div class="col-sm-6 col-xs-12 hidden-xs project-polaroid">
-                    <a class="polaroid" href="{{ url_for('blplugin.details', short_name = project.short_name) }}" data-polaroid-title="{{ project.name }}">
+                    <a class="polaroid" href="{{ url_for('project.details', short_name = project.short_name) }}" data-polaroid-title="{{ project.name }}">
                         {{ render_project_thumbnail(project, upload_method, class='img-polaroid', id="project.id") }}
                     </a>
                 </div>
@@ -177,7 +177,7 @@
                 {% endif %}
 
                 <div class="col-xs-12 text-center hidden-sm hidden-md hidden-lg padding-top-xs">
-                    <a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">
+                    <a href="{{ url_for('project.details', short_name = project.short_name) }}">
                         <div class="shadow shadow-inline">
                             {{ render_project_thumbnail(project, upload_method, class="img-polaroid", id="project.id") }}
                         </div>
@@ -185,7 +185,7 @@
                 </div>
 
                 <div class="col-sm-6 col-xs-10 col-xs-offset-1 col-sm-offset-0">
-                    <h2 class="text-center-xs"><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{ project.name }}</a></h2>
+                    <h2 class="text-center-xs"><a href="{{ url_for('project.details', short_name = project.short_name) }}">{{ project.name }}</a></h2>
                     {% if project.overall_progress < 100 %}
                         <p>{{ project.description }}</p>
                     {% else %}
@@ -193,7 +193,7 @@
                     {% endif %}
                     <div class="row hidden-md hidden-lg text-center">
                     {% if active_cat != "draft" %}
-                        <a class="btn btn-danger margin-top-sm margin-bottom-xs" href="{{ url_for('blplugin.details', short_name = project.short_name) }}">Contribute</a>
+                        <a class="btn btn-danger margin-top-sm margin-bottom-xs" href="{{ url_for('project.details', short_name = project.short_name) }}">Contribute</a>
                     {% endif %}
                     </div>
                 </div>
@@ -224,7 +224,7 @@
             </div>
             <div class="text-center padding-top-sm">
                 {% if active_cat != "draft" %}
-                    <p><a class="btn btn-danger" href="{{ url_for('blplugin.details', short_name = project.short_name) }}">Contribute</a></p>
+                    <p><a class="btn btn-danger" href="{{ url_for('project.details', short_name = project.short_name) }}">Contribute</a></p>
                 {% endif %}
             </div>
         </div>
