--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -51,7 +51,7 @@
                         </tr>
                     </thead>
                 {% for user in users %}
-                    {{ render_admin_user(user) }}
+                    {{ helper.render_admin_user(user) }}
                 {% endfor %}
                 </table>
             </div>
