--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -17,7 +17,7 @@
                     <div class="input-group">
                         <input id="user" name="user" type="text" class="search-query form-control" placeholder="Enter full name or username">
                         <span class="input-group-btn">
-                            <button type="submit" class="btn btn-default form-control search-button"><i class="fa fa-search"></i></button>
+                            <button type="submit" class="btn btn-default form-control margin-right-xs search-button"><i class="fa fa-search"></i></button>
                         </span>
                     </div>
                 </form>
